6110.	[cleanup]	Refactor the dns_xfrin module to use dns_dispatch
			to set up TCP connections and send and receive
			messages. [GL #3886]

6109.	[func]		Infrastructure for QSBR, asynchronous safe memory
			reclamation for lock-free data structures. [GL !7471]

6108.	[func]		Support for simple lock-free singly-linked stacks.
			[GL !7470]

6107.	[cleanup]	Remove the dns_sdb API and rewrite the named
			builtin databases to implement dns_db directly.
			[GL #3882]

6106.	[cleanup]	Move bind9_getaddresses() to isc_getaddresses()
			and remove the now empty libbind9. [GL !7462]

6105.	[bug]		Detach 'rpzs' and 'catzs' from the previous view in
			configure_rpz() and configure_catz(), respectively,
			just after attaching it to the new view. [GL #3880]

6104.	[cleanup]	Move libbind9's configuration checking code into
			libisccfg alongside the other configuration code.
			[GL !7461]

6103.	[func]		All uses of the isc_task and isc_event APIs have
			been refactored to use isc_loop instead, and the
			original APIs have been removed. [GL #3797]

6102.	[cleanup]	Several nugatory headers have been removed from libisc.
			[GL !7464]

6101.	[port]		Clarify the portability dodge needed for `strerror_r()`
			[GL !7465]

6100.	[cleanup]	Deprecate <isc/deprecated.h>, because obsolete
			functions are now deleted instead of marked with
			an attribute. [GL !7466]

6099.	[performance]	Change the internal read-write lock to modified C-RW-WP
			algorithm that is more reader-writer fair and has better
			performance for our workloads. [GL #1609]

6098.	[test]		Don't test HMAC-MD5 when not supported by libcrypto.
			[GL #3871]

6097.	[port]		Improve support for yield / pause instructions in spin
			loops on AArch64 platforms. [GL !7469]

6096.	[bug]		Fix RPZ reference counting error on shutdown in
			dns__rpz_timer_cb(). [GL #3866]

6095.	[test]		Test various 'islands of trust' configurations when
			using managed keys. [GL #3662]
