@@ -4,7 +4,6 @@ AM_CPPFLAGS +=			\
 	$(LIBISC_CFLAGS)	\
 	$(LIBDNS_CFLAGS)	\
 	$(LIBISCCFG_CFLAGS)	\
-	$(LIBIRS_CFLAGS)	\
 	$(GSSAPI_CFLAGS)	\
 	$(KRB5_CFLAGS)		\
 	$(READLINE_CFLAGS)
@@ -16,7 +15,6 @@ LDADD +=			\
 	$(LIBISC_LIBS)		\
 	$(LIBDNS_LIBS)		\
 	$(LIBISCCFG_LIBS)	\
-	$(LIBIRS_LIBS)		\
 	$(GSSAPI_LIBS)		\
 	$(KRB5_LIBS)
 
