@@ -1,1 +1,0 @@
-../../../.clang-format.headers
