@@ -1,3 +1,6 @@
+6111.	[cleanup]	Move irs_resconf into libdns, and remove the
+			now empty libirs. [GL !7463]
+
 6110.	[cleanup]	Refactor the dns_xfrin module to use dns_dispatch
 			to set up TCP connections and send and receive
 			messages. [GL #3886]
